# the-sqisign-1d

./: .gitignore  CMakeLists.txt  README.md
.cmake/: impl_type.cmake  sqisign_variant.cmake  sqisign_variant_for_sign_modules.cmake
KAT/: PQCsignKAT_802_lvl1_p248.rsp  PQCsignKAT_802_lvl1_p248_compressed_parallel.rsp  PQCsignKAT_802_lvl1_p248_parallel.rsp  PQCsignKAT_802_lvl1_p248_smart.rsp  PQCsignKAT_802_lvl1_p248_uncompressed.rsp
apps/: CMakeLists.txt  PQCgenKAT_sign.c  example_nistapi.c
include/: rng.h  sig.h
pqm4/: flatten_sources_for_pqm4.sh
pqm4/lvl1/: fp_p1913_32_m4.c
pqm4/lvl1_p248/: fp_p248_32_m4.c  pqm4_api.c
pqm4/lvl1_p248_smart/: api.h  fp_p248_32_m4.c  pqm4_api.c
pqm4/lvl1_p248_uncompressed/: pqm4_api.c
pqm4/lvl3/: fp_p47441_32_m4.c
pqm4/lvl5/: fp_p318233_32_m4.c
scripts/: cformat.py  precompute_ec_params.sage  precompute_endomorphism_action.sage  precompute_fp_constants.sage  precompute_klpt_constants.sage  precompute_sizes.sage  precompute_torsion_constants.sage
src/: CMakeLists.txt  sqisign.c
src/common/generic/: fips202.c  randombytes_ctrdrbg.c  randombytes_system.c
src/ec/ref/ecx/: basis.c  ec.c  isog_chains.c  kps.c  poly-mul.c  poly-redc.c  xeval.c  xisog.c
src/ec/ref/ecx/test/: fp2-test.c  isog-test.c  mont-test.c  poly-mul-test.c  poly-redc-test.c  test_extras.c  test_extras.h  velu-test.c
src/ec/ref/include/: ec.h  isog.h  poly.h
src/ec/ref/lvl1/test/: ec-tests.h  test-basis.h
src/ec/ref/lvl1_p248/: CMakeLists.txt
src/ec/ref/lvl1_p248/test/: CMakeLists.txt  ec-tests.h  test-basis.h
src/ec/ref/lvl3/: CMakeLists.txt
src/ec/ref/lvl3/test/: ec-tests.h  test-basis.h
src/ec/ref/lvl5/test/: CMakeLists.txt  ec-tests.h  test-basis.h
src/gf/: inversion.inc  symbol.inc
src/gf/broadwell/gfx/: fp.c  fp2.c
src/gf/broadwell/gfx/test/: test_extras.h  test_fp.c
src/gf/broadwell/include/: fp.h
src/gf/broadwell/lvl1/: CMakeLists.txt  fp.c
src/gf/broadwell/lvl1/test/: CMakeLists.txt
src/gf/broadwell/lvl1_p248/: CMakeLists.txt  bn_asm.S  fp.c  fp2.c  fp_asm.S
src/gf/broadwell/lvl1_p248/test/: CMakeLists.txt
src/gf/generic/: inversion.inc  symbol.inc
src/gf/mike/gfx/: fp.c  fp2.c
src/gf/mike/gfx/test/: test_extras.c  test_extras.h  test_fp.c  test_fp2.c
src/gf/mike/lvl1/: CMakeLists.txt  fp_p1913_32.c  fp_p1913_64.c
src/gf/mike/lvl1/test/: CMakeLists.txt
src/gf/mike/lvl1_p248/: CMakeLists.txt  fp_p248_32.c  fp_p248_64.c
src/gf/mike/lvl3/: CMakeLists.txt  fp_p47441_32.c  fp_p47441_64.c
src/gf/mike/lvl5/: CMakeLists.txt  fp_p318233_32.c  fp_p318233_64.c
src/gf/ref/gfx/: fp.c  fp2.c
src/gf/ref/gfx/test/: test_extras.h  test_fp.c
src/gf/ref/lvl1/: CMakeLists.txt  fp.c  fp_p1913_32.c  fp_p1913_64.c
src/gf/ref/lvl1/include/: fp.h
src/gf/ref/lvl1/test/: test_fp2.c
src/gf/ref/lvl1_p248/: CMakeLists.txt  fp.c  fp_p248_32.c  fp_p248_64.c
src/gf/ref/lvl1_p248/test/: test_fp.c
src/gf/ref/lvl3/: CMakeLists.txt  fp.c  fp_p47441_32.c  fp_p47441_64.c
src/gf/ref/lvl5/: CMakeLists.txt  fp.c  fp_p318233_32.c  fp_p318233_64.c
src/gf/ref/lvl5/include/: fp.h
src/gf/ref/lvl5/test/: test_fp.c
src/id2iso/ref/id2isox/: id2iso.c
src/id2iso/ref/lvl1/: CMakeLists.txt
src/id2iso/ref/lvl1_p248/: CMakeLists.txt
src/id2iso/ref/lvl1_p248/test/: CMakeLists.txt
src/id2iso/ref/lvl5/: CMakeLists.txt
src/intbig/ref/: CMakeLists.txt
src/klpt/ref/: CMakeLists.txt
src/nistapi/lvl1/: api.h
src/nistapi/lvl1_p248/: api.c  api.h
src/nistapi/lvl3/: api.h
src/nistapi/lvl5/: api.h
src/precomp/ref/lvl1/: CMakeLists.txt  ec_params.c  endomorphism_action.c
src/precomp/ref/lvl1/include/: ec_params.h  encoded_sizes.h  fp_constants.h
src/precomp/ref/lvl1_p248/: CMakeLists.txt  ec_params.c  sqisign_parameters.txt
src/precomp/ref/lvl1_p248/include/: ec_params.h  encoded_sizes.h  fp_constants.h  klpt_constants.h
src/precomp/ref/lvl3/: CMakeLists.txt  ec_params.c  endomorphism_action.c
src/precomp/ref/lvl3/include/: ec_params.h  encoded_sizes.h  fp_constants.h
src/precomp/ref/lvl5/: CMakeLists.txt  ec_params.c  endomorphism_action.c
src/precomp/ref/lvl5/include/: ec_params.h  encoded_sizes.h  fp_constants.h
src/protocols/ref/include/: protocols.h
src/protocols/ref/lvl1/: CMakeLists.txt
src/protocols/ref/lvl1_p248/: CMakeLists.txt
src/protocols/ref/lvl1_p248/test/: CMakeLists.txt
src/protocols/ref/lvl5/: CMakeLists.txt
src/protocols/ref/protocolsx/: encode.c  sign.c  verif.c
src/protocols/ref/protocolsx/test/: challenge.c  verif.c
test/: CMakeLists.txt  bench.c  bench_verif_kat.c  test_kat.c  test_sqisign.c  test_sqisign_prof.c
